Add color macro

--- a/latex_styles/custom.sty
+++ b/latex_styles/custom.sty
@@ -16,4 +16,4 @@
 
 % Include a command for the sake of the test suite.
 \newcommand{\softcover}{\texttt{softcover}}
-
+\newcommand\blathering[1]{{\color{red}#1}}
