--- a/config/preamble.tex
+++ b/config/preamble.tex
@@ -6,3 +6,4 @@
 % \usepackage{polyglossia}
 % \setdefaultlanguage{french}
 % \DeclareTextCommandDefault{\nobreakspace}{\leavevmode\nobreak\ }
+\usepackage[usenames,dvipsnames]{color}
